--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <h1>Enter some text</h1>
-    <h2>(it will be converted to uppercase)</h2>
+    <h1>Enter a place</h1>
     <form action="." method="POST">
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
