altered html very small changes and added option to turn off shutting of the window

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -5,6 +5,8 @@
     <form action="." method="POST">
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
+    <h1>Options</h1>
+	<h2>Window control</h2><input type="checkbox" name="WindowControl"></input>
     </form>
 </body>
 </html>
