--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -6,7 +6,7 @@
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<h2>Window control</h2><input type="checkbox" name="WindowControl"></input>
+	<p>Window control<input type="checkbox" name="WindowControl"></input></p>
     </form>
 </body>
 </html>
