Edited HTML in templates and StartServer.py

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -6,7 +6,8 @@
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<p>Window control<input type="checkbox" name="WindowControl"></input></p>
+	<p><input type="textbox" name="open"></input> <input type="radio" name="kelvin">Kelvin</input><input type="radio" name="celcius">Celcius</input></p>
+	<p>Window control<input type="radio" name="WindowControl"></input></p>
     </form>
 </body>
 </html>
