--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -6,8 +6,7 @@
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<p><input type="textbox" name="open"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="sclae" value="celcius">Celcius</input></p>
-	<p>Window control<input type="radio" name="WindowControl"></input></p>
+	<p><input type="textbox" name="open"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input></p>
     </form>
 </body>
 </html>
