Added text on html

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -6,7 +6,7 @@
         <input type="text" name="text">
         <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<p><input type="textbox" name="open"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
+	<p>Open window if temp is greater than<input type="textbox" name="open"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
     </form>
 </body>
 </html>
