Added css to control panel

--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<title>Control Panel</title>
+</head>
+
 <body>
     <h1>Enter a place</h1>
     <form action="." method="POST">
-        <input type="text" name="text">
+        <input type="text" name="text" class="textBOX">
         <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<p>Open window if temp is greater than<input type="textbox" name="open"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
+	<p>Open window if temp is greater than<input type="textbox" name="open" class="TextBOX"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
     </form>
 </body>
 </html>
