--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Control Panel</title>
-<link rel="stylesheet" type="text/css" href="/css/textbox.css">
+<link rel="stylesheet" type="text/css" href="css/textbox.css">
 </head>
 
 <body>
