--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -2,8 +2,46 @@
 <html lang="en">
 <head>
 <title>Control Panel</title>
-<link rel="stylesheet" type="text/css" href="css/textbox.css">
 </head>
+<style>
+/*Body css*/
+html{
+background-color: #00697d;
+border: 2px solid #999999;
+-moz-border-radius: 50px;
+-webkit-border-radius: 50px;
+border-radius: 50px;
+/*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+-moz-box-shadow: 0px 0px 13px #000000;
+-webkit-box-shadow: 0px 0px 13px #000000;
+box-shadow: 0px 0px 13px #000000;
+/*IE 7 AND 8 DO NOT SUPPORT BLUR PROPERTY OF SHADOWS*/
+
+}
+
+body{
+background-color: #12ffb9;
+border: 2px solid #999999;
+-moz-border-radius: 50px;
+-webkit-border-radius: 50px;
+border-radius: 50px;
+/*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+-moz-box-shadow: 0px 0px 20px #000000;
+-webkit-box-shadow: 0px 0px 20px #000000;
+box-shadow: 0px 0px 20px #000000;
+/*IE 7 AND 8 DO NOT SUPPORT BLUR PROPERTY OF SHADOWS*/
+opacity: 0.64;
+-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 64);
+/*-ms-filter must come before filter*/
+filter: alpha(opacity = 64);
+/*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
+/*All filters must be placed together*/
+
+}
+
+</style>
+
+
 
 <body>
     <h1>Enter a place</h1>
