--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -39,6 +39,16 @@ filter: alpha(opacity = 64);
 
 }
 
+.textBOX{
+-moz-border-radius: 50px;
+-webkit-border-radius: 50px;
+border-radius: 50px;
+/*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+-moz-box-shadow: 0px 0px 13px #000000;
+-webkit-box-shadow: 0px 0px 13px #000000;
+box-shadow: 0px 0px 13px #000000;
+/*IE 7 AND 8 DO NOT SUPPORT BLUR PROPERTY OF SHADOWS*/
+}
 </style>
 
 
@@ -47,9 +57,9 @@ filter: alpha(opacity = 64);
     <h1>Enter a place</h1>
     <form action="." method="POST">
         <input type="text" name="text" class="textBOX">
-        <input type="submit" name="my-form" value="Send">
     <h1>Options</h1>
-	<p>Open window if temp is greater than<input type="textbox" name="open" class="TextBOX"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
+	<p>Open window if temp is greater than<input type="textBOX" name="open" class="TextBOX"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
+    <input type="submit" name="my-form" value="Start">
     </form>
 </body>
 </html>
