--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -59,7 +59,7 @@ box-shadow: 0px 0px 13px #000000;
         <input type="text" name="text" class="textBOX">
     <h1>Options</h1>
 	<p>Open window if temp is greater than<input type="textBOX" name="open" class="TextBOX"></input> <input type="radio" name="scale" value="kelvin">Kelvin</input><input type="radio" name="scale" value="celcius">Celcius</input><input type="radio" name="scale" value="fah">FarenHeit</input></p>
-    <input type="submit" name="my-form" value="Start">
+   <center> <input type="submit" name="my-form" value="Start"></center>
     </form>
 </body>
 </html>
